# aria-macos

./: .gitignore  APICONTRACT copy.md  ARIA-UI.md  BACKEND_LOGS_REQUIREMENTS.md  CLAUDE.md  FIX.md  FRONTEND.json  MAGIC-AUTH.md  POSTMORTEM.md  README.md  SWIFT.md  SWIFT2.md  debug_test.swift  index.html  package.json  tailwind.config.ts  vite.config.ts
AriaChat/: AppDelegate.swift  AriaChat.xctestplan  AriaChatApp.swift
AriaChat.xcodeproj/: project.pbxproj
AriaChat.xcodeproj/xcshareddata/xcschemes/: AriaChat.xcscheme
AriaChat/AriaChat.xcworkspace/: contents.xcworkspacedata
AriaChatPackage/: MESSAGE_FLOW_FIX.md  METADATA_UPDATE.md  Package.resolved  Package.swift
AriaChatPackage/Sources/AriaChatFeature/: AgentStatusIndicator.swift  AnimationSystem.swift  AriaRootView.swift  BillingView.swift  BlurSettings.swift  ColorExtensions.swift  ContentView.swift  DropdownMenu.swift  GlassmorphicChatbar.swift  GlassmorphicEffect.swift  HoverState.swift  (+8 more)
AriaChatUITests/: AriaChatUITests.swift
Config/: AriaChat.entitlements  Info.plist  Shared.xcconfig  Tests.xcconfig
dist-electron/: main.js  main.js.map  preload.js  preload.js.map
electron/: main.ts  preload.ts  tsconfig.json
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/proto/: aria.proto  container_service.proto  notification_service.proto  session_service.proto
src-tauri/src/: commands.rs  grpc_client.rs  lib.rs
src/components/: glassmorphic-chatbar.tsx
src/lib/: animations.ts  providers.tsx  types.ts
src/pages/: Home.tsx
src/proto/: task_service.proto
(+50 files in other folders)
